# Soul-Symphony-Battle-Edition

./: Cargo.toml  README.md  ball_visuals.py  boss_battle.py  camera.py  level.py  main.py  player.py  pyproject.toml  save_state.json  soundfx.py  spawn_center.json  spawn_clients.py  weapon_system.py  world.py
.github/workflows/: master-release.yml
__pycache__/: accel_math._find_first_zone_idx_numba-42.py310.1.nbc  accel_math._find_first_zone_idx_numba-42.py312.1.nbc  accel_math._find_first_zone_idx_numba-42.py312.nbi  accel_math._find_room_idx_numba-24.py310.1.nbc
assets/data/: save_state.json
assets/graphics/shaders/: boss_hyper.frag  boss_hyper.vert  floor_wet.frag  floor_wet.vert  viscous_distort.frag  viscous_distort.sha  water_surface.frag  water_surface.vert
docs/: THIRD_PARTY_ASSETS.md  webgl-arch-wsl2.md
graphics/shaders/: viscous_distort.vert  water_surface.frag  water_surface.vert
legacy/launchers/: start_ss-battle-server.bat  start_ss-battle-server.lnk
legacy/python/: accel_math.py  camera.py  main.py  requirements.txt  server_app.py  setup.py  spawn_clients.py  weapon_system.py
legacy/python/scripts/: build_panda_webgl.sh  setup_arch_webgl.sh  tmp_apply_apache_proxy_fix.py  (+5 more)
scripts/: freezify.py  freezify_web.py  run_webgl_wsl.ps1  sync_wsl_portproxy_4747.ps1  tmp_pi_backend_probe.py  tmp_wsl_import_test.py
soul_symphony_2.egg-info/: PKG-INFO  requires.txt
src/: main.rs
src/game/: audio.rs  mod.rs  postfx.rs
src/world/: arena_fx.rs  camera.rs  level.rs  mod.rs  monsters.rs  player.rs  weapons.rs
webbuild/: preload_manifest.txt
(+9 files in other folders)
