[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-symphony-2"
version = "0.1.1"
description = "Panda3D procedural geometric dungeon prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Soul Symphony Contributors" }
]
dependencies = [
  "panda3d>=1.10",
  "numpy>=1.26",
  "numba>=0.59",
  "bullet"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment"
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
ss-battle = "main:run"

[tool.setuptools]
py-modules = [
  "accel_math",
  "ball_visuals",
  "camera",
  "level",
  "main",
  "player",
  "soundfx",
  "weapon_system",
  "world"
]
include-package-data = true
